--- a/FindX.WebApi/appsettings.json
+++ b/FindX.WebApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDbSettings": {
+    "Username": "fgroup",
+    "Password": "WCPcOjQZ5IENAqz3"
+  }
+
 }
