--- a/FindX.WebApi/appsettings.json
+++ b/FindX.WebApi/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoDbSettings": {
+    "Name": "FindX",
     "Username": "fgroup",
     "Password": "WCPcOjQZ5IENAqz3"
   }
