Clean Models, Add Collections to DBContext and register BSON GUID Serilaizer

--- a/FindX.WebApi/appsettings.Development.json
+++ b/FindX.WebApi/appsettings.Development.json
@@ -9,7 +9,8 @@
 		}
 	},
 	"MongoDbSettings": {
-		"Host": "localhost",
-		"Port": "27017"
+		"Name": "FindX",
+		"Username": "fgroup",
+		"Password": "WCPcOjQZ5IENAqz3"
 	}
 }
