--- a/FindX.WebApi/appsettings.json
+++ b/FindX.WebApi/appsettings.json
@@ -1,15 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "MongoDbSettings": {
-    "Name": "FindX",
-    "Username": "fgroup",
-    "Password": "WCPcOjQZ5IENAqz3"
-  }
-
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
