Added JWT authentication and Authorization filter on usercontroller, and added "GetAll" users method for testing

--- a/FindX.WebApi/appsettings.json
+++ b/FindX.WebApi/appsettings.json
@@ -5,5 +5,7 @@
 			"Microsoft.AspNetCore": "Warning"
 		}
 	},
-	"AllowedHosts": "*"
+	"AllowedHosts": "*",
+	"PrivateKey": "FindXKey12345678910111213141516171819"
+
 }
