Resolve Claims and Typed Service

--- a/FindX.WebApi/appsettings.Development.json
+++ b/FindX.WebApi/appsettings.Development.json
@@ -12,5 +12,8 @@
 		"Name": "FindX",
 		"Username": "fgroup",
 		"Password": "WCPcOjQZ5IENAqz3"
+	},
+	"JWT": {
+		"PrivateKey": "sC2EhBseSjsG2MketAYptVnNEMDlLn7e9+SZ2sslo8Y="
 	}
 }
