--- a/FindX.WebApi/appsettings.json
+++ b/FindX.WebApi/appsettings.json
@@ -5,7 +5,5 @@
 			"Microsoft.AspNetCore": "Warning"
 		}
 	},
-	"AllowedHosts": "*",
-	"PrivateKey": "FindXKeyJWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
-
+	"AllowedHosts": "*"
 }
